feat: implemented GameIntegrationTest

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,9 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.data.mongodb.uri=mongodb://localhost:27017/battleship_game
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=battleship_game
 
 server.port=8080
 
