feat: Improved Render

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,6 +8,9 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+
 # ==========================================
 # 2. Configuración MongoDB (Usando tu Docker Real)
 # ==========================================
