feat: game in local

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,18 +4,26 @@ server.port=8080
 # ==========================================
 # 1. DATABASE SQL (Players) - POSTGRESQL
 # ==========================================
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/battleship_db}
-spring.datasource.username=${DB_USER:postgres}
-spring.datasource.password=${DB_PASSWORD:admin}
+# --- CONFIGURACIÓN PARA JUGAR EN LOCAL (CONECTADO A BD RENDER) ---
 
-# JPA / Hibernate
+# 1. La URL (Cambiamos 'postgres://' por 'jdbc:postgresql://' y añadimos el puerto 5432)
+spring.datasource.url=jdbc:postgresql://dpg-d69htkumcj7s738paif0-a.frankfurt-postgres.render.com:5432/battleship_db_gmij?sslmode=require
+
+# 2. El Usuario (La primera parte de tu cadena)
+spring.datasource.username=battleship_db_gmij_user
+
+# 3. La Contraseña (La parte rara de en medio)
+spring.datasource.password=nubDQ5KJC0riqkmIi0WA06sfsNaPE5Dm
+
+# 4. Configuración extra para que no borre los datos al reiniciar
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # ==========================================
 # 2. CONFIGURATION MONGODB (Games)
 # ==========================================
-spring.data.mongodb.uri=${MONGO_URL:mongodb://localhost:27017/battleship_game}
+spring.data.mongodb.uri=mongodb+srv://spook242:Mon0242gO!@cluster0.jn2zcy4.mongodb.net/battleship_game?appName=Cluster0
 
 # ==========================================
 # 3. SECURITY JWT
